--- a/ExemploPalette/app/build.gradle
+++ b/ExemploPalette/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "br.com.s2mobile.exemplopalette"
+        applicationId "br.com.luizmarcus.exemplopalette"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
