--- a/ExemploPalette/app/src/main/AndroidManifest.xml
+++ b/ExemploPalette/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.s2mobile.exemplopalette" >
+    package="br.com.luizmarcus.exemplopalette" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        <activity android:name="br.com.luizmarcus.exemplopalette.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
